Recover precommit changes