@@ -7,9 +7,11 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,48 +22,55 @@ public class PipService {
     private final PipProgressUpdateRepository progressUpdateRepository;
     private final FollowUpMeetingRepository meetingRepository;
     private final TrainingRecordRepository trainingRepository;
-    private final UserRepository userRepository;
-    private final KpiRecordRepository kpiRecordRepository;
+    private final EmployeeRepository employeeRepository;
 
     public List<EligibleEmployeeDTO> getLowPerformers(User manager) {
         if (manager.getEmployee() == null) {
             return new ArrayList<>();
         }
-        return kpiRecordRepository.findLowPerformersByManager(manager.getEmployee().getId());
+        return employeeRepository.findAll().stream()
+                .filter(employee -> employee.getManager() != null && employee.getManager().getId().equals(manager.getEmployee().getId()))
+                .map(employee -> new EligibleEmployeeDTO(
+                        employee.getEmployeeId(),
+                        employee.getEmployeeName(),
+                        employee.getDepartment() == null ? null : employee.getDepartment().getName(),
+                        null))
+                .toList();
     }
 
     @Transactional
     public Pip createPip(PipCreateRequest request, User manager) {
-        User employee = userRepository.findByEmployee_Id(request.getEmployeeId())
+        Employee employee = employeeRepository.findById(request.getEmployeeId())
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
 
         Pip pip = new Pip();
         pip.setEmployee(employee);
-        pip.setManager(manager);
+        pip.setManager(manager.getEmployee());
+        pip.setCreatedBy(manager.getEmployee());
         pip.setStartDate(request.getStartDate());
         pip.setEndDate(request.getEndDate());
-        pip.setTotalHours(request.getTotalHours() != null ? request.getTotalHours() : 0);
-        pip.setCompletedHours(0);
-        pip.setStatus("ACTIVE");
+        pip.setStatus("Active");
+        pip.setOverallProgressPercentage(BigDecimal.ZERO);
 
         List<PipObjective> objectives = request.getObjectives().stream().map(desc -> {
             PipObjective obj = new PipObjective();
             obj.setDescription(desc);
             obj.setPip(pip);
+            obj.setDueDate(request.getEndDate() != null ? request.getEndDate() : LocalDate.now());
             obj.setProgressPercentage(0);
             return obj;
-        }).collect(Collectors.toList());
+        }).toList();
 
         pip.setObjectives(objectives);
         return pipRepository.save(pip);
     }
 
     public List<Pip> getManagerPips(User manager) {
-        return pipRepository.findByManager(manager);
+        return pipRepository.findByManager(manager.getEmployee());
     }
 
     public List<Pip> getEmployeePips(User employee) {
-        return pipRepository.findByEmployee(employee);
+        return pipRepository.findByEmployee(employee.getEmployee());
     }
 
     public List<Pip> getAllPips() {
@@ -78,37 +87,40 @@ public class PipService {
         PipObjective objective = objectiveRepository.findById(objectiveId)
                 .orElseThrow(() -> new RuntimeException("Objective not found"));
 
-        if (!objective.getPip().getStatus().equals("ACTIVE")) {
+        if (!"Active".equalsIgnoreCase(objective.getPip().getStatus())
+                && !"Reopened".equalsIgnoreCase(objective.getPip().getStatus())) {
             throw new RuntimeException("Cannot update progress on a closed PIP");
         }
 
         PipProgressUpdate update = new PipProgressUpdate();
+        update.setPip(objective.getPip());
         update.setObjective(objective);
         update.setPreviousPercentage(objective.getProgressPercentage());
         update.setNewPercentage(request.getProgressPercentage());
         update.setFeedback(request.getFeedback());
-        update.setUpdatedBy(updatedBy);
+        update.setUpdatedBy(updatedBy.getEmployee());
+        update.setUpdateDate(LocalDate.now());
 
         objective.setProgressPercentage(request.getProgressPercentage());
-
-        if (request.getCompletedHours() != null) {
-            Pip pip = objective.getPip();
-            pip.setCompletedHours(request.getCompletedHours());
-            pipRepository.save(pip);
-        }
+        updatePipProgress(objective.getPip());
 
         progressUpdateRepository.save(update);
+        pipRepository.save(objective.getPip());
         return objectiveRepository.save(objective);
     }
 
     @Transactional
-    public FollowUpMeeting scheduleMeeting(Long pipId, MeetingScheduleRequest request) {
+    public FollowUpMeeting scheduleMeeting(Long pipId, MeetingScheduleRequest request, User actor) {
         Pip pip = getPipById(pipId);
 
         FollowUpMeeting meeting = new FollowUpMeeting();
         meeting.setPip(pip);
         meeting.setMeetingTime(request.getMeetingTime());
-        meeting.setStatus("SCHEDULED");
+        meeting.setStatus("Scheduled");
+        meeting.getMeeting().setManager(pip.getManager());
+        meeting.getMeeting().setEmployee(pip.getEmployee());
+        meeting.getMeeting().setCreatedBy(actor.getEmployee());
+        meeting.getMeeting().setStatus("Scheduled");
 
         return meetingRepository.save(meeting);
     }
@@ -116,8 +128,8 @@ public class PipService {
     @Transactional
     public Pip closePip(Long pipId, PipCloseRequest request) {
         Pip pip = getPipById(pipId);
-        pip.setStatus("CLOSED");
-        pip.setFinalOutcome(request.getFinalOutcome());
+        pip.setStatus("Closed");
+        pip.setActualEndDate(LocalDate.now());
         pip.setClosingRemarks(request.getClosingRemarks());
         return pipRepository.save(pip);
     }
@@ -125,9 +137,8 @@ public class PipService {
     @Transactional
     public Pip reopenPip(Long pipId, PipReopenRequest request) {
         Pip pip = getPipById(pipId);
-        pip.setStatus("PENDING_REOPEN");
+        pip.setStatus("Reopened");
         pip.setReopenReason(request.getReason());
-        pip.setClosingRemarks(pip.getClosingRemarks() + "\n[REOPEN REQUESTED]: " + request.getReason());
         return pipRepository.save(pip);
     }
 
@@ -135,19 +146,15 @@ public class PipService {
     public Pip reviewPip(Long pipId, PipReviewRequest request) {
         Pip pip = getPipById(pipId);
         if ("CONFIRMED".equals(request.getAction())) {
-            pip.setStatus("ACTIVE");
+            pip.setStatus("Active");
         } else if ("DENIED".equals(request.getAction())) {
-            if ("PENDING_CREATION".equals(pip.getStatus())) {
-                pip.setStatus("DENIED");
-            } else if ("PENDING_REOPEN".equals(pip.getStatus())) {
-                pip.setStatus("CLOSED");
-            }
+            pip.setStatus("Closed");
         }
         return pipRepository.save(pip);
     }
 
     public List<TrainingRecord> getEmployeeTrainingHistory(Long employeeId) {
-        User employee = userRepository.findByEmployee_Id(employeeId)
+        Employee employee = employeeRepository.findById(employeeId)
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
         return trainingRepository.findByEmployee(employee);
     }
@@ -156,5 +163,18 @@ public class PipService {
         PipObjective objective = objectiveRepository.findById(objectiveId)
                 .orElseThrow(() -> new RuntimeException("Objective not found"));
         return progressUpdateRepository.findByObjective(objective);
+    }
+
+    private void updatePipProgress(Pip pip) {
+        List<PipObjective> objectives = pip.getObjectives();
+        if (objectives == null || objectives.isEmpty()) {
+            pip.setOverallProgressPercentage(BigDecimal.ZERO);
+            return;
+        }
+        double average = objectives.stream()
+                .mapToInt(PipObjective::getProgressPercentage)
+                .average()
+                .orElse(0.0);
+        pip.setOverallProgressPercentage(BigDecimal.valueOf(average).setScale(2, RoundingMode.HALF_UP));
     }
 }
